--- a/cart-styles.css
+++ b/cart-styles.css
@@ -200,3 +200,93 @@ body {
         justify-content: center;
         
     }
+
+
+    /* Footer Styles */
+footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: #ddf0f6;
+}
+
+footer .col {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+footer .ftlogo {
+    margin-bottom: 30px;
+}
+
+footer h4 {
+    font-size: 14px;
+    padding-bottom: 20px;
+}
+
+footer p {
+    font-size: 13px;
+    margin: 0 0 8px 0;
+}
+
+footer a {
+    font-size: 13px;
+    text-decoration: none;
+    margin: 0 0 8px 0;
+    color: #222;
+    margin-bottom: 20px;
+}
+
+footer .follow {
+    margin-top: 20px;
+}
+
+footer .follow i {
+    color: #465b52;
+    padding-right: 4px;
+    cursor: pointer;
+}
+
+footer .install .row img {
+    border: 1px solid #0f9a91;
+    border-radius: 5px;
+}
+
+footer .install img {
+    margin: 10px 0 15px 0;
+}
+
+footer .follow i:hover,
+footer a:hover {
+  color: #219f91;
+  font-weight: 800;
+  transform: scale(103%);
+  transition: all 0.3s ease;
+}
+
+footer .copyright {
+    width: 100%;
+    text-align: center;
+}
+
+.copyright {
+    padding: 5px;
+    text-align: center;
+    background-color: rgb(153, 230, 218);
+}
+
+#footercopyright {
+    font-family: 'Courier New', Courier, monospace; /* Optional: typewriter font */
+    border-right: 2px solid #0f9a91; /* The cursor */
+    display: inline-block;
+    padding-right: 5px;
+    animation: blink 0.7s infinite;
+}
+
+/* Makes the cursor blink */
+@keyframes blink {
+    0%, 100% { border-color: transparent; }
+    50% { border-color: #0f9a91; }
+}
